--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="superior">
-            <div class="conteudo1">CONTEÚDO 1</div>
-            <div class="conteudo2">CONTEÚDO 2</div>
-            <div class="conteudo3">CONTEÚDO 3</div>
+    <div class="pai">
+        <div class="f1">
+            <div class="n1">CONTEÚDO 1</div>
+            <div class="n2">CONTEÚDO 2</div>
+            <div class="n3">CONTEÚDO 3</div>
         </div>
-        <div class="inferior">
-            <div class="conteudo4">CONTEÚDO 4</div>
-            <div class="interno">
-                <div class="conteudo5">CONTEÚDO 5</div>
-                <div class="conteudo6">CONTEÚDO 6</div>
-            </div>
-            <div class="conteudo7">CONTEÚDO 7</div>
+        <div class="f2">
+            <div class="n4">CONTEÚDO 4</div>
+            <div class="n5">CONTEÚDO 5</div>
+            <div class="n6">CONTEÚDO 6</div>
+            <div class="n7">CONTEÚDO 7</div>
         </div>
     </div>
     
